# neural_network_from_scratch

./: .gitignore  CMakeLists.txt  README.md
examples/: iris.cpp  square_function.cpp
src/: Tensor.cpp  Tensor.hpp
src/functions/: Activation_factory.cpp  Activation_factory.hpp
src/initialization/: Initialization.cpp  Initialization.hpp
src/layers/: Cross_entropy.cpp  Cross_entropy.hpp  Layer.cpp  Layer.hpp  Linear.cpp  Linear.hpp  Mse.cpp  Mse.hpp  ReLU.cpp  ReLU.hpp  Softmax.cpp  Softmax.hpp  Tanh.cpp  Tanh.hpp
src/models/: MLPClassifier.cpp  MLPClassifier.hpp  MLPRegressor.cpp  MLPRegressor.hpp
src/operations/: Add.cpp  Add.hpp  Cross_entropy.cpp  Cross_entropy.hpp  Divide.cpp  Divide.hpp  Exp.cpp  Exp.hpp  Log.cpp  Log.hpp  Matrix_mul.cpp  Matrix_mul.hpp  Mse.cpp  Mse.hpp  Multiply.cpp  Multiply.hpp  Operation.cpp  Operation.hpp  ReLU.cpp  ReLU.hpp  Reduce_sum.cpp  Reduce_sum.hpp  Softmax.cpp  Softmax.hpp  Subtract.cpp  Subtract.hpp  Tanh.cpp  Tanh.hpp
src/preprocessing/: Min_max_scaler.cpp  Min_max_scaler.hpp  Preprocessing.hpp  Standard_scaler.cpp  Standard_scaler.hpp
src/utils/: data.cpp  data.hpp
